# monopoly-go-economy

./: .dockerignore  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  PROJECT.md  README.md  docker-compose.yml  pyproject.toml
.autoforge/: .claude_settings.expand.abf3514d1fc44a05ac581a7672979140.json  spec.md
.autoforge/prompts/: .spec_status.json  app_spec.txt
.claude/: settings.json  settings.local.json
.claude/commands/: check-code.md  checkpoint.md  create-spec.md  expand-project.md
.github/workflows/: deploy.yml  test.yml
.streamlit/: config.toml
coin-flip-assignment/: config_table.csv  input_table.csv
design-logs/: 001-design-log-setup.md  002-architecture-and-tooling.md  003-system-design-and-planning.md  006-coin-flip-simulation-engine.md  014-docker-containerization.md  022-chat-assistant.md  023-config-optimizer.md  024-info-tooltips.md  025-comprehensive-e2e-tests.md  026-css-history-label-fix.md  028-auto-generate-insights.md  029-sticky-kpi-bar.md  030-kpi-snapshot-regression-tests.md  031-docker-build-validation.md  032-generic-config-editor.md  032-generic-feature-routing.md  033-generic-ai-analysis-layer.md  034-generic-results-display.md  035-extract-session-utils-domain-errors-model-registry.md  035-split-protocols-module.md
docs/: 00-project-deep-dive-he.md  00-project-deep-dive.md  01-architecture.md  02-product.md  03-ai-integration.md  04-decisions.md  05-math-and-calculations.md  README.md
infra/: app.py
scripts/: validate_docker.sh
src/: cli.py
src/domain/: errors.py  (+1 more)
tests/: conftest.py  test_cli.py  test_fixtures_smoke.py
(+110 files in other folders)
